# Tindex

./: .gitignore  Application.manifest  CMakeLists.txt  FileTagIndex.c  Makefile  README.md  arrayarithmetic.c  arrayarithmetic.h  breakpath.c  bytearithmetic.c  bytearithmetic.h  cmake_install.cmake  dirfiles.c  dupstr.c  errorf.c  errorf.h  errorf.hpp  errorfcpp.cpp  errorobj.hpp  fentries.c  fentries.h  images.c  images.h  indextools.cpp  indextools.hpp  indextools_static.hpp  ioextras.c  ioextras.h  ioextras.hpp  ioextrascpp.cpp  main (copy).cpp  main.cpp  openclfunc.c  portables.c  portables.h  portables.hpp  portablescpp.cpp  prgdir.h  stringchains.c  stringchains.h  (+4 more)
data/: CMakeLists.txt  Makefile  openclkernels.cl
doc/: FTI notes.txt  notes.txt
docs/: FTI notes.txt  cmake notes.txt  old ideas.txt  src files.txt
src/: CMakeLists.txt  Makefile  arrayarithmetic.c  breakpath.c  breakpath.cpp  breakpath.h  breakpath.hpp  bytearithmetic.c  dirfiles.c  dirfiles.h  dupstr.c  dupstr.h  errorf.h  errorf.hpp  errorfcpp.cpp  errorobj.cpp  errorobj.hpp  images.cpp  images.hpp  indextools.cpp  indextools.hpp  indextools_private.cpp  indextools_private.hpp  indextools_static.hpp  ioextras.c  ioextrascpp.cpp  listdirtofile.c  listfiletest.c  main.cpp  openclfunc.c  openclfunc.h  portables.c  portables.h  portables.hpp  portablescpp.cpp  prgdir.cpp  prgdir.hpp  stringchains.c  tfiles.c  tfiles.h  (+6 more)
tests/: CMakeLists.txt  Makefile
tests/googletest/: CMakeLists.txt  Makefile  indextools_private_tests.cc
